RESOLVED FIXED240079
WebKit should only reload WebViews automatically on crash if the view is visible
https://bugs.webkit.org/show_bug.cgi?id=240079
Summary WebKit should only reload WebViews automatically on crash if the view is visible
Chris Dumez
Reported 2022-05-04 13:24:54 PDT
WebKit should only reload WebViews automatically on crash if the view is visible, to avoid unnecessary churn. Clients that want a different behavior can always implement their own crash handling.
Attachments
Chris Dumez
Comment 1 2022-05-04 13:26:26 PDT
Chris Dumez
Comment 2 2022-05-04 13:31:56 PDT
EWS
Comment 3 2022-05-04 16:52:49 PDT
Committed r293803 (250277@main): <https://commits.webkit.org/250277@main> Reviewed commits have been landed. Closing PR #500 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.